--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html> <!--HTML文書宣言-->
-<html lang="ja">
+<!DOCTYPE html>　　　<!--HTML文書宣言-->
+<html lang="ja">　　　<!--HTMLタグとページの言語指定-->
 <head>
-    
+    <title>サンプルページ</title>
 </head>
 <body>
-  
+  <p>段落</p>
 </body>
 </html>
