--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>　　　<!--HTML文書宣言-->
 <html lang="ja">　　　<!--HTMLタグとページの言語指定-->
-<head>
-    <title>サンプルページ</title>
+<head>　　　<!--headタグ、ページ内には表示されない情報-->
+    <meta charset="UFT-8">　　　<!--metaタグと文字エンコーディング-->
+    <title>サンプルページ</title>　　　<!--titleタグ、タブでのページのタイトル指定-->
 </head>
 <body>
   <p>段落</p>
