--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
   <p>段落</p>
+  <h1>大</h1>
+  <a href="https://portal.keio.jp/koid/">クリック</a>
+  <img src="image.jpg" alt="画像なし">
+  <ul>
+    <li>あ</li>
+    <li>か</li>
+    <li>さ</li>
+  </ul>
+  <p>テキスト<br>改行</p>
 </body>
 </html>
