--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <li>さ</li>
   </ul>
   <p>テキスト<br>改行</p>
+  <a href="https://portal.keio.jp/koid/" style="padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">クリック</a>
 </body>
 </html>
