--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
   </ul>
   <p>テキスト<br>改行</p>
   <a href="https://portal.keio.jp/koid/" style="padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">クリック</a>
+  <!--CSSを直接記述するインラインスタイル-->
+  <br>
+  <button disabled>無効なボタン</button>
 </body>
 </html>
