--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p>テキスト<br>改行</p>
   <a href="https://portal.keio.jp/koid/" style="padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">クリック</a>
   <!--CSSを直接記述するインラインスタイル-->
-  <br>
+  <p style="margin-bottom: 48px;"></p>
   <button disabled>無効なボタン</button>
 </body>
 </html>
