--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
   <p>テキスト<br>改行</p>
   <a href="https://portal.keio.jp/koid/" style="padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">クリック</a>
   <!--CSSを直接記述するインラインスタイル-->
-  <p style="margin-bottom: 48px;"></p>
+  <p style="margin-bottom: 32px;"></p>
   <button disabled>無効なボタン</button>
+  <p style="margin-bottom: 32px;"><button onclick="location.reload();">リロード</button></p>
+  <button class="hoverButton">ホバーボタン</button>
+
+  <style>
+  .hoverButton {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  .hoverButton:hover {
+    background-color: #0056b3;
+  }
+  </style>
+
 </body>
 </html>
