--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <source media="(max-width: 600px)" srcset="small-image.jpg">
             <img src="large-image.jpg" alt="背景画像">
         </picture>
-        <h1>ようこそ！</h1>
+        <h1>2024/11/06</h1>
     </div>
 
     <!-- スクロール後のコンテンツ -->
     <div class="content">
-        <h2>サイトの中身へようこそ</h2>
+        <h2>サイトの中身</h2>
         <p>ここにはサイトの詳細な説明や、リンク、ボタンなどが配置されています。</p>
         <button onclick="alert('ボタンがクリックされました')">ボタンクリック</button>
     </div>
