--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>スクロールで移動するコンテンツ</title>
+    <title>固定背景とスクロールボックス</title>
     <style>
         /* 基本スタイル設定 */
         * {
@@ -12,33 +12,33 @@
             box-sizing: border-box;
         }
 
-        /* 背景の設定 */
+        /* 全画面の背景設定 */
         .background {
             width: 100%;
             height: 100vh;
             background-image: url('large-image.jpg');
             background-size: cover;
             background-position: center;
-            background-attachment: fixed; /* 背景を固定 */
+            background-attachment: fixed;
             display: flex;
             justify-content: center;
             align-items: center;
             color: white;
             font-size: 3vw;
             text-align: center;
+            position: relative;
         }
 
-        /* 背景画像上の文字 */
-        .background h1 {
-            margin: 0;
-            opacity: 0.8;
-        }
-
-        /* スクロールで表示されるコンテンツ */
-        .content {
-            padding: 2rem;
+        /* スクロールで移動する白いボックス */
+        .content-box {
             background-color: rgba(255, 255, 255, 0.9);
-            min-height: 100vh;
+            width: 80%;
+            max-width: 600px;
+            padding: 2rem;
+            margin-top: -100vh; /* スクロールすると背景の上にボックスが重なる */
+            text-align: center;
+            color: #333;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
         }
 
         /* メニューバー */
@@ -55,7 +55,7 @@
             align-items: center;
             cursor: pointer;
             border-radius: 4px;
-            z-index: 10; /* メニューバーを一番前面に表示 */
+            z-index: 10; /* メニューバーを最前面に */
         }
 
         /* レスポンシブ文字サイズ調整 */
@@ -71,7 +71,7 @@
     <!-- メニューバー -->
     <div class="menu-bar">≡</div>
 
-    <!-- 全画面の背景画像とテキスト -->
+    <!-- 全画面の背景画像 -->
     <div class="background">
         <picture>
             <source media="(max-width: 600px)" srcset="small-image.jpg">
@@ -80,8 +80,8 @@
         <h1>2024/11/06</h1>
     </div>
 
-    <!-- スクロールで表示されるコンテンツ -->
-    <div class="content">
+    <!-- 背景画像上に表示されるコンテンツボックス -->
+    <div class="content-box">
         <h2>サイトの中身へようこそ</h2>
         <p>ここにはサイトの詳細な説明や、リンク、ボタンなどが配置されています。</p>
         <button onclick="alert('ボタンがクリックされました')">ボタンクリック</button>
