--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             width: 50%;
             transition: transform 3s;
         }
+        
+        /* ここで速度を調整 */
+        .frame {
+        /* アニメーションの速さを6秒に設定 */
+        animation: zoomIn 6s forwards; 
+        }
 
         /* ズームインアニメーション */
         @keyframes zoomIn {
