--- a/index.html
+++ b/index.html
@@ -1,91 +1,79 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
+<!DOCTYPE html>   <!--HTML文書宣言-->
+<html lang="ja">   <!--HTMLタグとページの言語指定-->
+<head>   <!--headタグ、ページ内には表示されない情報-->
+    <meta charset="UFT-8">   <!--metaタグと文字エンコーディング-->
+    <title>Portfolio</title>   <!--titleタグ、タブでのページのタイトル指定-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>写真からズームインするパララックスページ</title>
+    <!--width=device-widthで表示領域の幅をデバイスに合わせる-->
+    <!--initial-scale=1.0で初期表示の拡大率を100%にしている-->
+
     <style>
-        /* 基本スタイル */
+        /*すべての要素に対して指定する*/
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            box-sizing: border-box;   /*paddingやborderをwidthに含める*/
         }
 
-        /* フレーム部分 */
-        .frame {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        /*各セクションのスタイル*/
+        .section {
+            height: 200vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: black;
-            z-index: 10;
-            overflow: hidden;
-            animation: zoomIn 3s forwards;
-            animation-delay: 2s;  /* 2秒の遅延 */
-        }
-
-        /* 写真の初期状態 */
-        .frame img { 
-            width: 50%;
-            transition: transform 3s;
-        }
-        
-        /* ここで速度を調整 */
-        .frame {
-            /* アニメーションの速さを6秒に設定 */
-            animation: zoomIn 6s forwards; 
-        }
-
-        /* ズームインアニメーション */
-        @keyframes zoomIn {
-            0% {
-                transform: scale(1);
-            }
-            100% {
-                transform: scale(3);
-                opacity: 0;
-            }
-        }
-
-        /* フレームが消えた後のパララックス効果 */
-        .parallax {
-            background-image: url('background-image.jpg');
-            background-attachment: fixed;
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
+            color: black;
             font-size: 2rem;
             text-align: center;
         }
+
+        /*パララックス背景の設定*/
+        .parallax {
+            background-image: url('frame-image.jpg');
+            height: 100vh;
+            background-attachment: fixed;   /*固定背景でパララックス効果*/
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* 他のセクションの背景色 */
+        .content {
+            background-color: white;
+        }
+
+        /*メニューバー*/
+        .menu-bar {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            width: 40px;
+            height: 40px;
+            background-color: #333;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border-radius: 4px;
+            z-index: 10;
+        }
     </style>
 </head>
+
 <body>
+    <!--メニューバー-->
+    <div class="menu-bar">≡</div>
 
-    <!-- ズームインフレーム -->
-    <div class="frame">
-        <img src="frame-image.jpg" alt="フレーム画像">
-    </div>
-
-    <!-- パララックス背景セクション -->
+    <!--パララックス背景-->
     <div class="parallax">
-        <h1>2024/11/06</h1>
+        <h1>画像</h1>
     </div>
 
-    <script>
-        // アニメーションが終わったらフレームを消去
-        document.querySelector('.frame').addEventListener('animationend', function() {
-            this.style.display = 'none';
-        });
-    </script>
-
+    <!--スクロール時に表示されるコンテンツセクション-->
+    <div class="section content">
+        <h2>サイトの中身</h2>
+        <p>ここには説明やリンク、ボタンなどが配置</p>
+    </div>
 </body>
-</html>
