--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--width=device-widthで表示領域の幅をデバイスに合わせる-->
     <!--initial-scale=1.0で初期表示の拡大率を100%にしている-->
-
+    <link rel="stylesheet" href="styles.css">   <!--CSSとリンク-->
     <style>
         /*すべての要素に対して指定する*/
         * {
@@ -76,4 +76,27 @@
         <h2>サイトの中身</h2>
         <p>ここには説明やリンク、ボタンなどが配置</p>
     </div>
+
+
+
+    <section id="works">
+        <h2>WORKS</h2>
+        <div class="work-cards">
+            <div class="work-card">
+                <img src="blender.jpg" alt="Blender" class="work-image">
+                <h3>Blender</h3>
+                <a href="blender.html" class="work-button">作品を見る</a>
+            </div>
+            <div class="work-card">
+                <img src="illustration.jpg" alt="Illustration" class="work-image">
+                <h3>Illustration</h3>
+                <a href="illustration.html" class="work-button">作品を見る</a>
+            </div>
+            <div class="work-card">
+                <img src="picture.jpg" alt="Photograph" class="work-image">
+                <h3>Photograph</h3>
+                <a href="picture.html" class="work-button">作品を見る</a>
+            </div>
+        </div>
+    </section>
 </body>
