--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
 
     <!--スクロール時に表示されるコンテンツセクション-->
     <div class="section content">
-        <h2>サイトの中身</h2>
+        <h2>サイトの中身</h2><br>
         <p>ここには説明やリンク、ボタンなどが配置</p>
     </div>
-
-
 
     <section id="works">
         <h2>WORKS</h2>
