--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         /*各セクションのスタイル*/
         .section {
+            height: 10vh;
             display: flex;
             justify-content: center;
             align-items: center;
