--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         /*すべての要素に対して指定する*/
         * {
-            margin: 0;
+            margin: 1rem;
             padding: 0;
             box-sizing: border-box;   /*paddingやborderをwidthに含める*/
         }
