--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <!--initial-scale=1.0で初期表示の拡大率を100%にしている-->
     <link rel="stylesheet" href="styles.css">   <!--CSSとリンク-->
     <style>
+        /* ページ全体の余白設定 */
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* 各要素に1remの余白を追加 */
+        .section, .menu-bar, .work-cards, .work-card {
+            margin: 1rem;
+        }
+
         /*各セクションのスタイル*/
         .section {
             height: 30vh;
