--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--width=device-widthで表示領域の幅をデバイスに合わせる-->
     <!--initial-scale=1.0で初期表示の拡大率を100%にしている-->
-    <link rel="stylesheet" href="styles.css">   <!--CSSとリンク-->
+    <link rel="stylesheet" href="style.css">   <!--CSSとリンク-->
     <style>
         /* ページ全体の余白設定 */
         body {
