--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         /* 各要素に1remの余白を追加 */
-        .section, .menu-bar, .work-cards, .work-card {
+        .section, .works, .work-cards, .work-card {
             margin: 1rem;
         }
 
