--- a/blender.html
+++ b/blender.html
@@ -11,7 +11,7 @@
     <div class="gallery">
         <div class="gallery-item">
             <div class="img-item">
-                <img src="image1.jpg" alt="放課後の教室" class="gallery-image">
+                <img src="image1.png" alt="放課後の教室" class="gallery-image">
             </div>
             <p>放課後の教室</p>
         </div>
