--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         /* 各要素に1remの余白を追加 */
-        .section, .works, .work-cards, .work-card {
+        .section, .work-cards, .work-card {
             margin: 1rem;
         }
 
@@ -32,7 +32,7 @@
 
         /*パララックス背景の設定*/
         .parallax {
-            background-image: url('frame-image.jpg');
+            background-image: url('background-image.jpg');   /*背景画像をここで指定*/
             height: 100vh;
             background-attachment: fixed;   /*固定背景でパララックス効果*/
             background-size: cover;
