--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
     <!--スクロール時に表示されるコンテンツセクション-->
     <div class="section content">
-        <h2>Profile</h2>
+        <h2>あ</h2>
         <br>
-        <p>ここには説明やリンク、ボタンなどが配置</p>
+        <p>説明、リンク、ボタン配置</p>
     </div>
 
     <section id="works">
@@ -93,7 +93,7 @@
             <div class="work-card">
                 <img src="illustration.jpg" alt="Illustration" class="work-image">
                 <h3>Illustration</h3>
-                <a href="illustration.html" class="work-button">作品を見る</a>
+                <a href="https://xfolio.jp/portfolio/harukyabe2" class="work-button">作品を見る</a>
             </div>
             <div class="work-card">
                 <img src="picture.jpg" alt="Photograph" class="work-image">
