--- a/index.html
+++ b/index.html
@@ -86,21 +86,18 @@
     <section id="works">
         <h2>WORKS</h2>
         <div class="work-cards">
-            <div class="work-card">
+            <a href="blender.html" class="work-card">
                 <img src="blender.jpg" alt="Blender" class="work-image">
                 <h3>Blender</h3>
-                <a href="blender.html" class="work-button">作品を見る</a>
-            </div>
-            <div class="work-card">
+            </a>
+            <a href="https://xfolio.jp/portfolio/harukyabe2" class="work-card">
                 <img src="illustration.jpg" alt="Illustration" class="work-image">
                 <h3>Illustration</h3>
-                <a href="https://xfolio.jp/portfolio/harukyabe2" class="work-button">作品を見る</a>
-            </div>
-            <div class="work-card">
+            </a>
+            <a href="picture.html" class="work-card">
                 <img src="picture.jpg" alt="Photograph" class="work-image">
                 <h3>Photograph</h3>
-                <a href="picture.html" class="work-button">作品を見る</a>
-            </div>
+            </a>
         </div>
-    </section>
+    </section>    
 </body>
