--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>WORKS</h2>
         <div class="work-cards">
             <a href="blender.html" class="work-card">
-                <img src="blender.jpg" alt="Blender" class="work-image">
+                <img src="blender.png" alt="Blender" class="work-image">
                 <h3>Blender</h3>
             </a>
             <a href="https://xfolio.jp/portfolio/harukyabe2" class="work-card">
