--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <img src="illustration.jpg" alt="Illustration" class="work-image">
                 <h3>Illustration</h3>
             </a>
-            <a href="picture.html" class="work-card">
-                <img src="picture.jpg" alt="Photograph" class="work-image">
+            <a href="photograph.html" class="work-card">
+                <img src="photograph.jpg" alt="Photograph" class="work-image">
                 <h3>Photograph</h3>
             </a>
         </div>
