--- a/photograph.html
+++ b/photograph.html
@@ -11,7 +11,7 @@
     <div class="gallery">
         <div class="gallery-item">
             <div class="img-item">
-                <img src="p1.png" alt="p1" class="gallery-image">
+                <img src="backmirror.jpg" alt="p1" class="gallery-image">
             </div>
             <p>回想</p>
         </div>
@@ -19,7 +19,7 @@
             <div class="img-item">
                 <img src="p2.jpg" alt="p2" class="gallery-image">
             </div>
-            <p>公衆電話</p>
+            <p></p>
         </div>
         <div class="gallery-item">
             <div class="img-item">
