--- a/blender.html
+++ b/blender.html
@@ -32,7 +32,7 @@
     <!-- モーダルのHTML -->
     <div id="modal" class="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="modal-image" alt="">
+        <img class="modal-content" id="modal-image" alt="modal content">
     </div>
 
     <script src="script.js"></script>
