--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h3>Illustration</h3>
             </a>
             <a href="photograph.html" class="work-card">
-                <img src="photograph.jpg" alt="Photograph" class="work-image">
+                <img src="backmirror.jpg" alt="Photograph" class="work-image">
                 <h3>Photograph</h3>
             </a>
         </div>
