illustration_image add

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3>Blender</h3>
             </a>
             <a href="https://xfolio.jp/portfolio/harukyabe2" class="work-card">
-                <img src="illustration.jpg" alt="Illustration" class="work-image">
+                <img src="Fauna_1207.jpg" alt="Illustration" class="work-image">
                 <h3>Illustration</h3>
             </a>
             <a href="photograph.html" class="work-card">
